--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
 	<body>
 		<div class='container'>
 			<%= render 'layouts/header' %>
+			<% flash.each do |name, msg| %>
+				<%= content_tag(:div, msg, class: "asert alert-#{name}") %>
+			<% end %>
 			<%= yield %>
 		</div>
 	</body>
