--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,9 @@
-<div class="hero-unit">
-	<h1>Welcome to One Month Rails</h1>
-	<p>Find me in app/views/pages/about.html.erb</p>
-		<%= link_to "Sign up here", "http://onemonthrails.com", class: "btn btn-primary btn-large" %>
-</div>
+<% if user_signed_in? %>
+	<h1>You are logged in!</h1>
+<% else %>
+	<div class="hero-unit">
+		<h1>Welcome to One Month Rails</h1>
+		<p>Find me in app/views/pages/about.html.erb</p>
+		<%= link_to "Sign up here", new_user_registration_path, class: "btn btn-primary btn-large" %>
+	</div>
+<% end %>
