--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,7 +11,7 @@
   <%= f.input :current_password, label: "Old password" %>
 
   <div class="form-horizontal">
-    <%= f.submit "Update", class: "btn btn-primary" %>
+    <%= f.submit "Update", class: "btn btn-custom" %>
   </div>
 <% end %>
 
