--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,6 +4,6 @@
 	<div class="hero-unit">
 		<h1>Welcome to One Month Rails</h1>
 		<p>Find me in app/views/pages/about.html.erb</p>
-		<%= link_to "Sign up here", new_user_registration_path, class: "btn btn-primary btn-large" %>
+		<%= link_to "Sign up here", new_user_registration_path, class: "btn btn-primary btn-custom" %>
 	</div>
 <% end %>
