--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -1,13 +1,18 @@
-<tr>
-      <td><%= image_tag pin.image(:medium) %></td>
-      <td><%= pin.description %></td>
-      <td><%= link_to 'Show', pin %></td>
-      <td>
-      	<% if current_user == pin.user %>
-      		<%= link_to 'Edit', edit_pin_path(pin) %></td>
+<div class="box">
+<%= link_to (image_tag pin.image(:medium)), pin %>
+<p class="description">
+	<%= pin.description %>
+</p>
+<p>
+	<strong>
+		Posted by <%= pin.user.name%>
+	</strong>
+</p>
+      <% if current_user == pin.user %>
+      		<%= link_to 'Edit', edit_pin_path(pin) %>
   		<% end %>
-      <td>
-      	<% if current_user == pin.user %>
-      		<%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      
+      <% if current_user == pin.user %>
+      		<%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %>
   		<% end %>
-</tr>
+</div>
